--- a/META-INF/changenotes.html
+++ b/META-INF/changenotes.html
@@ -1,5 +1,11 @@
 <html>
 <dl>
+<dt>1.0a55-57</dt>
+<dd>IDEA 13 Support</dd>
+<br>
+<dt>1.0a42-54</dt>
+<dd>Intermission, go get a popcorn.</dd>
+<br>
 <dt>1.0a41</dt>
 <dd>Many fixes to path handling in the run configurations</dd>
 <br>
